<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.StaticLogin"
    android:id="@+id/welcome_toast"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_bubble_chart_24"
        android:contentDescription="@string/successWelcomeIconAlt" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successLogin"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successLoginMessage"
        android:textColor="@color/maxBlue_100"
        android:textSize="14sp"
        android:textAlignment="center"
        />
</LinearLayout>