<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingHorizontal="60dp"
        android:paddingVertical="30dp">
        <!-- label group -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelLogin"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            />
        <!-- edit text group -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1.3"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hintUsername"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1.3"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hintPassword"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1.2"
            android:text="@string/textLogin"
            android:textStyle="bold"
            app:cornerRadius="50dp" />
    </LinearLayout>


</RelativeLayout>